[GTK] Add some documentation to WebKitWebExtension https://bugs.webkit.org/show_bug.cgi?id=142786

Patch by Marcos Chavarría Teijeiro <mchavarria@igalia.com> on 2015-05-20
Reviewed by Carlos Garcia Campos.

WebKitWebExtension API documentation lacks of some details and the information
available is in some contributors blog posts. I add the section
documentation with a small guide about how to use WebExtensions.

The code examples were taken from Carlos García and Adrián Pérez blog
posts.

* WebProcess/InjectedBundle/API/gtk/WebKitWebExtension.cpp:

Canonical link: https://commits.webkit.org/163217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184638 268f45cc-cd09-0410-ab3c-d52691b4dbfc